Updated detecting and segmenting. Added recognizing. Added lpdetect.

--- a/README
+++ b/README
@@ -1,7 +1,5 @@
 Para compilar:
-g++ segment.h segment.cpp -o segment `pkg-config --cflags --libs opencv`;
-
-g++ detect.cpp -o detect `pkg-config --cflags --libs opencv`;
+make all
 
 Para usar
-./segment img.jpg
+./lpdetect cases/small1.jpg
